# pico-keypad

./: .gitignore  CMakeLists.txt  LICENSE  README.md  circuit_diagram.drawio  commands.txt  deploy.sh  gdb-client.sh  gdb-server.sh  keyboard_matrix_circuit_diagram.drawio  pico-numpad.c  usbshark.sh
Keys/: Keymap.h  Keys.c  Keys.h
include/: bongocat.h  itachi.h  itachi_frame.h  keypad_matrix.h  naruto_pain.h  usb_descriptors.h
lib/button/: README.md  button.c  button.h
lib/debounce/: debounce.c  debounce.h
lib/graphics/: color.c  color.h  font.h
lib/joystick8way/: joystick8way.c  joystick8way.h
lib/keyboard/: keyboard.c  keyboard.h
lib/led/: led.c  led.h
lib/macro/: macro.c  macro.h
lib/pico_extra/: pico_extra.c  pico_extra.h
lib/rotary_encoder/: README.md  rotary_encoder.c  rotary_encoder.h
lib/ssd1306/: font.h  ssd1306.c  ssd1306.h
lib/ssd1331/: font.h  font_editor.html  ssd1331.c  ssd1331.h
lib/st7735s/: st7735s.c  st7735s.h
lib/tinyusb/: usb_descriptors.c  usb_descriptors.h
lib/usb/: usb.c  usb.h  usb_common.h  usb_config.c  usb_config.h  usb_descriptors.h  usb_hid.c  usb_hid.h  usb_structs.h
lib/usb/deprecated/: usb_cdc.h
lib/ws2812b/: ws2812b.c  ws2812b.h
pcb/Anesidora/: Anesidora.kicad_pcb  Anesidora.kicad_prl  Anesidora.kicad_pro  Anesidora.kicad_sch  fp-lib-table
pcb/KB426/: KB426.kicad_pcb  KB426.kicad_prl  KB426.kicad_pro  KB426.kicad_sch  fp-lib-table  sym-lib-table
src/: anesidora.c  cow.h  pico-keypad.c  pico_extra.h
src/Keys/: Keys.c  Keys.h  layout.h
src/button/: button.c  button.h
src/fightstick/button/: button.c  button.h
src/fightstick/joystick/: joystick.c  joystick.h
src/hw040/: hw040.c  hw040.h
src/keyboard/: keyboard.c  keyboard.h  layout.h
src/keyboard_matrix/: keyboard_matrix.c  keyboard_matrix.h  layout.h
src/keys/: keys.c  keys.h  layout.h
src/led_indicator/: led_indicator.c  led_indicator.h
src/leds/: leds.c  leds.h
src/lib/tinyusb/: tusb_config.h
src/macro/: macro.c  macro.h
src/rgb_leds_strip/: rgb_led_strip.c  rgb_led_strip.h
src/rotary_encoder/: rotary_encoder.c  rotary_encoder.h
src/ssd1331/: ssd1331.c  ssd1331.h
src/toggle_switch/: toggle_switch.c
src/usb/: descriptor.h  dev_lowlevel.c  dev_lowlevel.h  usb.c  usb.h  usb_common.h  usb_device.c  usb_device.h  usb_hid.c  usb_hid.h
src/ws2812b/: ws2812b.c  ws2812b.h
